# ctx-probe

./: .gitignore  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml
examples/sample_corpus/: lorem_a.txt  lorem_b.md
src/ctx_probe/: __init__.py  cli.py  corpus.py  report.py  runner.py
src/ctx_probe/adapters/: __init__.py  anthropic.py  base.py
src/ctx_probe/probes/: multi_needle.py  needle.py
src/ctx_probe/templates/: report.html.j2
tests/: conftest.py  test_corpus.py  test_probes.py  test_report.py  test_runner.py
