[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctx-probe"
version = "0.1.0"
description = "Measure your model's effective context window on your data."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Opportune", email = "hello@opportunedev.com" }]
keywords = ["llm", "context", "benchmark", "anthropic", "openai", "rag"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "jinja2>=3.1",
    "tiktoken>=0.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
ctx-probe = "ctx_probe.cli:main"

[project.urls]
Homepage = "https://opportunedev.com"
Repository = "https://github.com/opportune/ctx-probe"

[tool.hatch.build.targets.wheel]
packages = ["src/ctx_probe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
