[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctx-probe"
version = "0.1.1"
description = "Measure your model's effective context window on your data."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Opportune", email = "hello@opportunedev.com" }]
keywords = ["llm", "context", "benchmark", "anthropic", "openai", "rag", "evaluation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "jinja2>=3.1",
    "tiktoken>=0.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
ctx-probe = "ctx_probe.cli:main"

[project.urls]
Homepage = "https://opportunedev.com"
Repository = "https://github.com/OpportuneDev/ctx-probe"
Issues = "https://github.com/OpportuneDev/ctx-probe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ctx_probe"]

[tool.hatch.build.targets.wheel.force-include]
"examples/sample_corpus" = "ctx_probe/data/sample_corpus"

[tool.hatch.build.targets.sdist]
include = [
    "src/ctx_probe",
    "examples",
    "tests",
    "README.md",
    "GETTING_STARTED.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
